--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 }
 
 body{
-    background-image: url("https://t4.ftcdn.net/jpg/04/97/80/99/360_F_497809944_FMo3DO6j7XSlb9rZKOlnqaaWoJhuZXBm.jpg");
+    background-image: url("https://media.istockphoto.com/id/962500712/video/4k-tl-cloudy-sky-with-sun-rays.jpg?s=640x640&k=20&c=XQrz-Y4FIzovVlayePLhPZpHoM8-iLN7gZ_uSdnoe-8=");
+    background-size: cover; 
+    background-repeat: no-repeat; 
 }
 
 .card{
